# storm-dat

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run.py
src/: __init__.py  routes.py
src/config/: config.py
src/output_table/: output_table.py
src/parse_files/: parse_files.py
src/static/: modern-styles.css
src/templates/: modern_base.html
src/templates/pages/: modern_home.html  modern_record.html  modern_word_result.html  modern_word_upload.html
src/utils/: __init__.py  security.py  security_headers.py  validators.py
src/word_analysis/: word_analysis.py
